--- a/cloud-core-java-bom/pom.xml
+++ b/cloud-core-java-bom/pom.xml
@@ -97,4 +97,18 @@
         </dependency>
     </dependencies>
 
+    <repositories>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/netcracker/*</url>
+            <snapshots/>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/netcracker/qubership-core-microservice-dependencies</url>
+        </repository>
+    </distributionManagement>
 </project>
