--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,15 @@
     <artifactId>cloud-core-java-bom-parent</artifactId>
     <version>11.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
+    
+    <licenses>
+        <license>
+            <name>Apache-2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+  
 
     <modules>
         <module>cloud-core-java-bom</module>
