--- a/cloud-core-java-bom/pom.xml
+++ b/cloud-core-java-bom/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.qubership.cloud</groupId>
     <artifactId>cloud-core-java-bom</artifactId>
-    <version>11.1.0</version>
+    <version>11.1.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>cloud-core-java-bom</name>
