--- a/cloud-core-java-bom/pom.xml
+++ b/cloud-core-java-bom/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.qubership.cloud</groupId>
+    <groupId>com.netcracker.cloud</groupId>
     <artifactId>cloud-core-java-bom</artifactId>
     <version>11.1.2-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -21,68 +21,68 @@
     <properties>
         <io.micrometer.verion>1.14.9</io.micrometer.verion>
         <java.version>17</java.version>
-        <mongo.evolution.version>7.1.2</mongo.evolution.version>
-        <rest.libraries.version>6.1.1</rest.libraries.version>
-        <dbaas.client.version>8.1.1</dbaas.client.version>
-        <framework.extension.version>6.1.2</framework.extension.version>
-        <context.propagation.version>7.1.3</context.propagation.version>
-        <maas-client.version>11.1.1</maas-client.version>
-        <core-error-handling.version>3.1.2</core-error-handling.version>
+        <mongo.evolution.version>7.1.3-SNAPSHOT</mongo.evolution.version>
+        <rest.libraries.version>6.1.2-SNAPSHOT</rest.libraries.version>
+        <dbaas.client.version>8.1.2-SNAPSHOT</dbaas.client.version>
+        <framework.extension.version>6.1.3-SNAPSHOT</framework.extension.version>
+        <context.propagation.version>7.1.4-SNAPSHOT</context.propagation.version>
+        <maas-client.version>11.1.2-SNAPSHOT</maas-client.version>
+        <core-error-handling.version>3.1.3-SNAPSHOT</core-error-handling.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
             <!-- Database-independent library for tracking -->
             <dependency>
-                <groupId>org.qubership.cloud</groupId>
+                <groupId>com.netcracker.cloud</groupId>
                 <artifactId>core-error-handling-rest</artifactId>
                 <version>${core-error-handling.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.qubership.cloud</groupId>
+                <groupId>com.netcracker.cloud</groupId>
                 <artifactId>core-error-handling-runtime</artifactId>
                 <version>${core-error-handling.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.qubership.cloud</groupId>
+                <groupId>com.netcracker.cloud</groupId>
                 <artifactId>mongo-evolution</artifactId>
                 <version>${mongo.evolution.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.qubership.cloud</groupId>
+                <groupId>com.netcracker.cloud</groupId>
                 <artifactId>mongo-evolution-spring</artifactId>
                 <version>${mongo.evolution.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.qubership.cloud</groupId>
+                <groupId>com.netcracker.cloud</groupId>
                 <artifactId>dbaas-client-bom</artifactId>
                 <version>${dbaas.client.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.qubership.cloud</groupId>
+                <groupId>com.netcracker.cloud</groupId>
                 <artifactId>rest-libraries-bom</artifactId>
                 <version>${rest.libraries.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.qubership.cloud</groupId>
+                <groupId>com.netcracker.cloud</groupId>
                 <artifactId>framework-extension-bom</artifactId>
                 <version>${framework.extension.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.qubership.cloud</groupId>
+                <groupId>com.netcracker.cloud</groupId>
                 <artifactId>context-propagation-bom</artifactId>
                 <version>${context.propagation.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.qubership.cloud.maas.client</groupId>
+                <groupId>com.netcracker.cloud.maas.client</groupId>
                 <artifactId>maas-client-bom</artifactId>
                 <version>${maas-client.version}</version>
                 <type>pom</type>
