--- a/cloud-core-java-bom/pom.xml
+++ b/cloud-core-java-bom/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.netcracker.cloud</groupId>
     <artifactId>cloud-core-java-bom</artifactId>
-    <version>11.2.5</version>
+    <version>11.2.6-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>cloud-core-java-bom</name>
